# rationai-sdk-python

./: .gitignore  .gitlab-ci.yml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  x.py
.github/workflows/: mkdocs-build.yml  python-lint.yml
docs/: index.md
docs/learn/: how-it-works.md
docs/learn/get-started/: quick-start.md
docs/reference/: client.md
docs/reference/resources/: models.md  qc.md  slide.md
docs/reference/types/: qc.md
examples/: model_client_example.py  nuclei_example.py  qc_example.py
learn/get-started/quick-start/: index.html
learn/how-it-works/: index.html
rationai/: __init__.py  _resource.py  client.py
rationai/clients/: __init__.py  model_client.py  model_configs.py  qc_client.py
rationai/resources/: __init__.py  models.py  qc.py  segmentation.py  service_configs.py  slide.py  tilers.py
rationai/segmentation/: __init__.py  batch.py  core.py  segmentation.py  streaming.py  types.py
rationai/segmentation/streaming/: __init__.py  batched.py  ordered.py  unordered.py
rationai/tests/: test_batch.py  test_in_memory.py  test_segmentation.py  test_stream.py
rationai/types/: __init__.py  qc.py
reference/client/: index.html
reference/resources/models/: index.html
reference/resources/qc/: index.html
reference/resources/slide/: index.html
reference/types/qc/: index.html
search/: search_index.json
tests/: test_qc.py
