[project]
name = "rationai"
version = "0.1.0"
description = "Python SDK for RationAI pathology image analysis"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Jiří Štípek", email = "567776@mail.muni.cz" }]
dependencies = [
    "aiohttp>=3.12.15",
    "numpy>=2.3.2",
    "openslide-python>=1.4.2",
    "Pillow>=10.0.0",
    "ratiopath>=0.1.0",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = ["mypy>=1.18.2", "ruff>=0.14.5"]
