[project]
name = "rationai"
version = "0.1.0"
description = "Python SDK for RationAI pathology image analysis"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Matěj Pekár", email = "matejpekar@mail.muni.cz" },
    { name = "Jiří Štípek", email = "567776@mail.muni.cz" },
]
dependencies = [
    "httpx>=0.27.0",
    "lz4>=4.4.5",
    "numpy>=2.3.2",
    "Pillow>=10.0.0",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = ["mypy>=1.18.2", "ruff>=0.14.5"]
